finished basic ui

--- a/Multiples/Base.lproj/Main.storyboard
+++ b/Multiples/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Multiples" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,86 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="chalkboard" translatesAutoresizingMaskIntoConstraints="NO" id="9cv-Jp-npI" userLabel="Background">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="9cv-Jp-npI" secondAttribute="height" multiplier="1:1" id="qW0-qg-15L"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MULTIPLES" translatesAutoresizingMaskIntoConstraints="NO" id="0cX-AE-pVs" userLabel="Logo">
+                                <rect key="frame" x="140" y="20" width="320" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="vX3-SH-BvF"/>
+                                    <constraint firstAttribute="width" constant="320" id="yRE-aN-N79"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ntn-c8-zps" userLabel="PlayButton">
+                                <rect key="frame" x="210" y="400" width="194" height="192"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="194" id="1th-X1-Qs6"/>
+                                    <constraint firstAttribute="height" constant="192" id="IY7-6W-wKq"/>
+                                </constraints>
+                                <state key="normal" image="play"/>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ksj-sR-w2g" userLabel="StartText">
+                                <rect key="frame" x="210" y="351" width="194" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="194" id="g4R-q3-04a"/>
+                                    <constraint firstAttribute="height" constant="45" id="kpc-Q2-C1L"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Press Add to Start!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YuF-WE-t29" userLabel="Display">
+                                <rect key="frame" x="140" y="179" width="320" height="84"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="84" id="Cu4-qi-9Z4"/>
+                                    <constraint firstAttribute="width" constant="320" id="IPc-vU-Hhv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="35"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uuC-9x-iK8" userLabel="AddButton">
+                                <rect key="frame" x="220" y="458" width="160" height="76"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="76" id="42s-nF-AHU"/>
+                                    <constraint firstAttribute="width" constant="160" id="Ytb-MG-3kT"/>
+                                </constraints>
+                                <state key="normal" image="add"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ntn-c8-zps" secondAttribute="bottom" constant="8" id="8mI-oZ-t0k"/>
+                            <constraint firstItem="uuC-9x-iK8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GSv-C6-fwQ"/>
+                            <constraint firstItem="0cX-AE-pVs" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="HfV-Xc-3lZ"/>
+                            <constraint firstItem="YuF-WE-t29" firstAttribute="top" secondItem="0cX-AE-pVs" secondAttribute="bottom" constant="31" id="ISb-Vh-9wl"/>
+                            <constraint firstItem="ntn-c8-zps" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KEb-wh-UZt"/>
+                            <constraint firstItem="ntn-c8-zps" firstAttribute="top" secondItem="Ksj-sR-w2g" secondAttribute="bottom" constant="19" id="RVv-4O-TAr"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="uuC-9x-iK8" secondAttribute="bottom" constant="66" id="S50-iX-K19"/>
+                            <constraint firstItem="Ksj-sR-w2g" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YIY-tq-Wp8"/>
+                            <constraint firstItem="YuF-WE-t29" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bVL-Bh-ZP4"/>
+                            <constraint firstItem="0cX-AE-pVs" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="33" id="qpR-cb-BLJ"/>
+                            <constraint firstItem="0cX-AE-pVs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yEU-Zd-WY3"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="qpR-cb-BLJ"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="380" y="348"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="MULTIPLES" width="533" height="124"/>
+        <image name="add" width="211" height="101"/>
+        <image name="chalkboard" width="801" height="750"/>
+        <image name="play" width="272" height="268"/>
+    </resources>
 </document>
